--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port=3002
+
+# 라이브 리로드 설정
+spring.devtools.livereload.enable=true
+
+# 타임리프 설정
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
 
